--- a/prac.ipynb
+++ b/prac.ipynb
@@ -6,7 +6,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"hello python!\")"
+    "# 10950번\n",
+    "'''\n",
+    "두 정수 A와 B를 입력받은 다음, A+B를 출력하는 프로그램을 작성하시오.\n",
+    "첫째 줄에 테스트 케이스의 개수 T가 주어진다.\n",
+    "\n",
+    "각 테스트 케이스는 한 줄로 이루어져 있으며, 각 줄에 A와 B가 주어진다. (0 < A, B < 10)\n",
+    "'''\n",
+    "\n",
+    "t_num = int(input())\n",
+    "# a, b = map(int, input().split())\n",
+    "\n",
+    "for i in range(0, t_num):\n",
+    "    a, b = map(int, input().split())\n",
+    "    print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "1095번\n",
+    "두 정수 A와 B를 입력받은 다음, A+B를 출력하는 프로그램을 작성하시오.\n",
+    "\n",
+    "입력은 여러 개의 테스트 케이스로 이루어져 있다.\n",
+    "각 테스트 케이스는 한 줄로 이루어져 있으며, 각 줄에 A와 B가 주어진다. (0 < A, B < 10)\n",
+    "입력의 마지막에는 0 두 개가 들어온다.\n",
+    "'''\n",
+    "\n",
+    "while True:\n",
+    "    a, b = map(int, input().split())\n",
+    "    if a+b >0:\n",
+    "        print(a+b)\n",
+    "    else:\n",
+    "        break"
    ]
   }
  ],
