--- a/tutorial/4_iteration.ipynb
+++ b/tutorial/4_iteration.ipynb
@@ -27,7 +27,7 @@
     "input_n = int(input())\n",
     "\n",
     "for i in range(1,input_n+1):\n",
-    "    print(i,)"
+    "    print(i)"
    ]
   },
   {
