--- a/tutorial/6_array.ipynb
+++ b/tutorial/6_array.ipynb
@@ -48,6 +48,52 @@
     "\n",
     "print(*result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "10807번\n",
+    "\n",
+    "총 N개의 정수가 주어졌을 때, 정수 v가 몇 개인지 구하는 프로그램을 작성하시오.\n",
+    "\n",
+    "첫째 줄에 정수의 개수 N(1 ≤ N ≤ 100)이 주어진다. \n",
+    "둘째 줄에는 정수가 공백으로 구분되어져있다. \n",
+    "셋째 줄에는 찾으려고 하는 정수 v가 주어진다. 입력으로 주어지는 정수와 v는 -100보다 크거나 같으며, 100보다 작거나 같다.\n",
+    "\n",
+    "첫째 줄에 입력으로 주어진 N개의 정수 중에 v가 몇 개인지 출력한다.\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "n = int(input())\n",
+    "arr = list(input().split()) # arr의 모든 요소를 타입변환 가능?\n",
+    "find_v = int(input())\n",
+    "\n",
+    "result = 0\n",
+    "for i in range(0, len(arr)):\n",
+    "    if int(arr[i]) == find_v:\n",
+    "        result +=1\n",
+    "\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -66,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
