--- a/tutorial/6_array.ipynb
+++ b/tutorial/6_array.ipynb
@@ -93,7 +93,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "5597번\n",
+    "\n",
+    "X대학 M교수님은 프로그래밍 수업을 맡고 있다. 교실엔 학생이 30명이 있는데, \n",
+    "학생 명부엔 각 학생별로 1번부터 30번까지 출석번호가 붙어 있다.\n",
+    "교수님이 내준 특별과제를 28명이 제출했는데, 그 중에서 제출 안 한 학생 2명의 출석번호를 구하는 프로그램을 작성하시오.\n",
+    "\n",
+    "입력은 총 28줄로 각 제출자(학생)의 출석번호 n(1 ≤ n ≤ 30)가 한 줄에 하나씩 주어진다. 출석번호에 중복은 없다.\n",
+    "\n",
+    "출력은 2줄이다. 1번째 줄엔 제출하지 않은 학생의 출석번호 중 가장 작은 것을 출력하고, 2번째 줄에선 그 다음 출석번호를 출력한다.\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "submitted = []\n",
+    "for i in range(0,28):\n",
+    "    num = int(input())\n",
+    "    submitted.append(num)\n",
+    "\n",
+    "#입력 다하고 빈 번호 찾기. 먼저 순서대로 sort\n",
+    "submitted.sort()\n",
+    "for i in range(1,31):\n",
+    "    if i in submitted:\n",
+    "        True\n",
+    "    else: # \n",
+    "        print(i)\n",
+    "    \n",
+    "\n",
+    "##################################### comment#########################\n",
+    "''' \n",
+    "찾을 때 리스트 길이로 돌지 말고 상수 선언해서 돌아야 확실하게 돌 수 있다... 이래서 오답 한번 났었음\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "2738번\n",
+    "\n",
+    "N*M크기의 두 행렬 A와 B가 주어졌을 때, 두 행렬을 더하는 프로그램을 작성하시오.\n",
+    "\n",
+    "\n",
+    "첫째 줄에 행렬의 크기 N 과 M이 주어진다. 둘째 줄부터 N개의 줄에 행렬 A의 원소 M개가 차례대로 주어진다. \n",
+    "이어서 N개의 줄에 행렬 B의 원소 M개가 차례대로 주어진다. N과 M은 100보다 작거나 같고, 행렬의 원소는 절댓값이 100보다 작거나 같은 정수이다.\n",
+    "\n",
+    "\n",
+    "첫째 줄부터 N개의 줄에 행렬 A와 B를 더한 행렬을 출력한다. 행렬의 각 원소는 공백으로 구분한다.\n",
+    "'''\n",
+    "n , m = map(int,input().split())\n",
+    "\n",
+    "arr_a=[]\n",
+    "arr_b=[]\n",
+    "\n",
+    "for a in range(n):\n",
+    "    a = list(map(int,input().split()))\n",
+    "    arr_a.append(a)\n",
+    "    \n",
+    "for b in range(n):\n",
+    "    b = list(map(int,input().split()))\n",
+    "    arr_b.append(b)\n",
+    "    \n",
+    "for row in range(n):\n",
+    "    for col in range(m):\n",
+    "        print(arr_a[row][col]+arr_b[row][col],end=' ')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
