유사 블랙잭 문제 해결

--- a/class2/bronze2.ipynb
+++ b/class2/bronze2.ipynb
@@ -73,7 +73,134 @@
     "    if int(input_test_num_list[i]) in prime_num_list:\n",
     "        result += 1\n",
     "    \n",
-    "print(result)\n"
+    "print(result)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "3\n",
+      "(5, 6, 7)\n",
+      "18\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(5, 6, 8)\n",
+      "19\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(5, 6, 9)\n",
+      "20\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(5, 7, 8)\n",
+      "20\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(5, 7, 9)\n",
+      "21\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(5, 8, 9)\n",
+      "22\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(6, 7, 8)\n",
+      "21\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(6, 7, 9)\n",
+      "22\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(6, 8, 9)\n",
+      "23\n",
+      "<class 'tuple'>\n",
+      "3\n",
+      "(7, 8, 9)\n",
+      "24\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 51\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28msum\u001b[39m \u001b[38;5;241m<\u001b[39m M:\n\u001b[1;32m     49\u001b[0m         res_candidate\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28msum\u001b[39m)\n\u001b[0;32m---> 51\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mres_candidate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28mprint\u001b[39m(res)\n",
+      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "2798번\n",
+    "김정인 버전의 블랙잭에서 각 카드에는 양의 정수가 쓰여 있다. \n",
+    "그 다음, 딜러는 N장의 카드를 모두 숫자가 보이도록 바닥에 놓는다. 그런 후에 딜러는 숫자 M을 크게 외친다.\n",
+    "이제 플레이어는 제한된 시간 안에 N장의 카드 중에서 3장의 카드를 골라야 한다. \n",
+    "블랙잭 변형 게임이기 때문에, 플레이어가 고른 카드의 합은 M을 넘지 않으면서 M과 최대한 가깝게 만들어야 한다.\n",
+    "N장의 카드에 써져 있는 숫자가 주어졌을 때, M을 넘지 않으면서 M에 최대한 가까운 카드 3장의 합을 구해 출력하시오.\n",
+    "\n",
+    "첫째 줄에 카드의 개수 N(3 ≤ N ≤ 100)과 M(10 ≤ M ≤ 300,000)이 주어진다. \n",
+    "둘째 줄에는 카드에 쓰여 있는 수가 주어지며, 이 값은 100,000을 넘지 않는 양의 정수이다.\n",
+    "합이 M을 넘지 않는 카드 3장을 찾을 수 있는 경우만 입력으로 주어진다.\n",
+    "\n",
+    "\n",
+    "첫째 줄에 M을 넘지 않으면서 M에 최대한 가까운 카드 3장의 합을 출력한다.\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "100 C 3\n",
+    "뽑아서 M 값 안넘는 놈 중에서 맥스 뽑기\n",
+    "itertools라는 내장 모듈이 있습니다. 그걸 사용해보기\n",
+    "vs\n",
+    "조합 함수 구현하기...\n",
+    "'''\n",
+    "\n",
+    "from itertools import combinations\n",
+    "################입력받기\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "arr=list(map(int, input().split()))\n",
+    "\n",
+    "\n",
+    "result = list(combinations(arr, 3))\n",
+    "res_candidate = []\n",
+    "for element in result:\n",
+    "    # print(type(element))\n",
+    "    # print(len(element))\n",
+    "    # print(element)\n",
+    "    sum = 0\n",
+    "    for value in element:\n",
+    "        sum +=value\n",
+    "    # print(sum)\n",
+    "\n",
+    "    if sum <= M:\n",
+    "        res_candidate.append(sum)\n",
+    "\n",
+    "\n",
+    "res = max(res_candidate)\n",
+    "print(res)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
