--- a/class2/bronze1.ipynb
+++ b/class2/bronze1.ipynb
@@ -193,6 +193,99 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "260\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "2609번\n",
+    "두 개의 자연수를 입력받아 최대 공약수와 최소 공배수를 출력하는 프로그램을 작성하시오.\n",
+    "\n",
+    "첫째 줄에는 두 개의 자연수가 주어진다. 이 둘은 10,000이하의 자연수이며 사이에 한 칸의 공백이 주어진다.\n",
+    "\n",
+    "\n",
+    "첫째 줄에는 입력으로 주어진 두 수의 최대공약수를, 둘째 줄에는 입력으로 주어진 두 수의 최소 공배수를 출력한다.\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "'''\n",
+    "최대공약수란? 두 수의 최대공약수는 두 수가 서로 공통으로 가지고 있는 약수 중 가장 큰 수입니다\n",
+    "최소공배수란? 두 수의 최소공배수는 두 수에 서로 공통으로 존재하는 배수 중 가장 작은 수를 뜻합니다\n",
+    "\n",
+    "1. 두 입력을 받음\n",
+    "2. 최대공약수 만들기:\n",
+    "    큰 수까지 반복으로 돌면서:\n",
+    "        나머지가 둘다 0일 경우 가장 큰 수 업데이트\n",
+    "3. 최소공배수 만들기:\n",
+    "    두 수에 대한 지정리스트를 초기화\n",
+    "    while true:\n",
+    "        두 수에 while 카운터가 늘어나면서 곱하는 값들이 각각의 리스트에 어팬드\n",
+    "        두 리스트를 비교해서 교집합이 있으면 그것이 최소공배수\n",
+    "'''\n",
+    "\n",
+    "def GCD(a , b):\n",
+    "    res = 1\n",
+    "    big_num = max(a, b)\n",
+    "    for i in range(1,big_num+1):\n",
+    "        if a%i == 0 and b%i ==0:\n",
+    "            res = i\n",
+    "\n",
+    "    return  res\n",
+    "\n",
+    "    \n",
+    "\n",
+    "def LCM(a, b):\n",
+    "    #****************기존의 접근 *********************\n",
+    "    # a_list = []\n",
+    "    # b_list = []\n",
+    "    # counter = 1\n",
+    "    # while True:\n",
+    "    #     a_list.append(a*counter)\n",
+    "    #     b_list.append(b*counter)\n",
+    "    #     a_set = set(a_list)\n",
+    "    #     b_set = set(b_list)\n",
+    "\n",
+    "    #     CM = a_set.intersection(b_set)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    #     if len(CM) > 0:\n",
+    "    #         # print(min(CM))\n",
+    "    #         res = min(CM)\n",
+    "            \n",
+    "    #         break\n",
+    "\n",
+    "    #     counter += 1\n",
+    "    #****************기존의 접근 *********************\n",
+    "\n",
+    "    #**********최대공약수를 활용한 관계식 이용 *********\n",
+    "    gcd = GCD(a, b)\n",
+    "    res = a * b // gcd\n",
+    "    return res\n",
+    "\n",
+    "    \n",
+    "\n",
+    "a ,b = map(int, input().split())\n",
+    "\n",
+    "res_gcd = GCD(a, b)\n",
+    "res_lcm = LCM(a ,b)\n",
+    "\n",
+    "\n",
+    "print(res_gcd)\n",
+    "print(res_lcm)\n"
+   ]
   }
  ],
  "metadata": {
@@ -211,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
