조합 문제(11050)번 해결

--- a/class2/bronze1.ipynb
+++ b/class2/bronze1.ipynb
@@ -288,6 +288,68 @@
     "print(res_gcd)\n",
     "print(res_lcm)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "11050번\n",
+    "자연수 \\(N\\)과 정수  \\(K\\)가 주어졌을 때 이항 계수 \\(\\binom{N}{K}\\)를 구하는 프로그램을 작성하시오.\n",
+    "\n",
+    "첫째 줄에는 N과 K가 주어진다. (1 ≤ N ≤ 10, 0 ≤ K ≤ N)\n",
+    "\n",
+    "\n",
+    "N과 k의 이항계수를 출력한다.\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "'''\n",
+    "이항계수? nCm 이거 아님?\n",
+    "그러면\n",
+    "n! / (n-k)! * k!\n",
+    "\n",
+    "팩토리얼 구하는 계산을 해봐야하는데?\n",
+    "'''\n",
+    "\n",
+    "def pactorial(start_num, end_num = -1):\n",
+    "    res = 1\n",
+    "    for i in range(0, start_num):\n",
+    "        # print(i)\n",
+    "        res *= start_num-i\n",
+    "\n",
+    "    if end_num !=-1:\n",
+    "        divide = 1\n",
+    "        if end_num == 0: #0팩토리얼은 그냥 1로 고정\n",
+    "            divide = 1\n",
+    "        for j in range(0,start_num-end_num):\n",
+    "            \n",
+    "            divide *= start_num-end_num-j\n",
+    "        res = res // divide\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "\n",
+    "n, k = map(int, input().split())\n",
+    "\n",
+    "up = pactorial(n, end_num=k)\n",
+    "down = pactorial(k)\n",
+    "# print(up)\n",
+    "# print(down)\n",
+    "ans = up//down\n",
+    "print(ans)\n"
+   ]
   }
  ],
  "metadata": {
@@ -306,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
