--- a/class2/Silver5.ipynb
+++ b/class2/Silver5.ipynb
@@ -67,30 +67,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = ['bird', 'apple', 'sex', 'car', 'feeling','car']\n",
-    "l = list(set(l))\n",
-    "l.sort()\n",
-    "\n",
-    "ll = []\n",
-    "\n",
-    "shortest_len = 100000000000\n",
-    "for word in l:\n",
-    "    if len(word)<shortest_len:\n",
-    "        shortest_len = len(word)\n",
-    "        print(shortest_len)\n",
-    "\n",
-    "while len(ll) != len(l):\n",
-    "    for word in l:\n",
-    "        if len(word) == shortest_len:\n",
-    "            ll.append(word)\n",
-    "    shortest_len += 1\n",
+    "'''\n",
+    "2751번\n",
+    "N개의 수가 주어졌을 때, 이를 오름차순으로 정렬하는 프로그램을 작성하시오.\n",
     "\n",
     "\n",
-    "print(ll)"
+    "첫째 줄에 수의 개수 N(1 ≤ N ≤ 1,000,000)이 주어진다. 둘째 줄부터 N개의 줄에는 수가 주어진다. \n",
+    "이 수는 절댓값이 1,000,000보다 작거나 같은 정수이다. 수는 중복되지 않는다.\n",
+    "\n",
+    "첫째 줄부터 N개의 줄에 오름차순으로 정렬한 결과를 한 줄에 하나씩 출력한다.\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "'''\n",
+    "이거 그냥 리스트 소트로 안됨...?\n",
+    "'''\n",
+    "import sys\n",
+    "# test = [3, 5 ,7, 2 ,8, 1]\n",
+    "# test.sort()\n",
+    "# print(test)\n",
+    "\n",
+    "input_list = []\n",
+    "\n",
+    "length = int(sys.stdin.readline())\n",
+    "\n",
+    "\n",
+    "for i in range(0,length):\n",
+    "    element = int(sys.stdin.readline())\n",
+    "    input_list.append(element)\n",
+    "\n",
+    "input_list.sort()\n",
+    "\n",
+    "for i in range(0, length):\n",
+    "    print(input_list[i])\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -110,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
