--- a/class2/Silver5.ipynb
+++ b/class2/Silver5.ipynb
@@ -159,6 +159,67 @@
     "for i in range(len(input_total)):\n",
     "    print(input_total[i][0],input_total[i][1])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3, 4], [1, 1], [1, -1], [2, 2], [3, 3]]\n",
+      "5\n",
+      "1 -1\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "11650번\n",
+    "2차원 평면 위의 점 N개가 주어진다. \n",
+    "좌표를 x좌표가 증가하는 순으로, x좌표가 같으면 y좌표가 증가하는 순서로 정렬한 다음 출력하는 프로그램을 작성하시오.\n",
+    "\n",
+    "\n",
+    "첫째 줄에 점의 개수 N (1 ≤ N ≤ 100,000)이 주어진다. 둘째 줄부터 N개의 줄에는 i번점의 위치 xi와 yi가 주어진다. \n",
+    "(-100,000 ≤ xi, yi ≤ 100,000) 좌표는 항상 정수이고, 위치가 같은 두 점은 없다.\n",
+    "\n",
+    "첫째 줄부터 N개의 줄에 점을 정렬한 결과를 출력한다.\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "\n",
+    "''' \n",
+    "2중 리스트로 받은 다음에 소팅하는 방법을 쓰면 안되나?\n",
+    "'''\n",
+    "\n",
+    "num = int(input())\n",
+    "\n",
+    "\n",
+    "input_total = []\n",
+    "for i in range(num):\n",
+    "    add = list(map(int, input().split()))\n",
+    "    input_total.append(add)\n",
+    "\n",
+    "##################### 입력귀찮아서 테스트용 ###########################\n",
+    "# input_total = [[3, 4], [1, 1], [1, -1], [2, 2], [3, 3]]\n",
+    "# print(input_total)\n",
+    "# print(len(input_total))\n",
+    "\n",
+    "### KEY_LINE ###\n",
+    "input_total.sort(key = lambda x:(x[0], x[1])) \n",
+    "### KEY_LINE ###\n",
+    "\n",
+    "\n",
+    "for i in range(len(input_total)):\n",
+    "    print(input_total[i][0],input_total[i][1])\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
