이분탐색 문제 추가(1920번)

--- a/binary_search/Silver5.ipynb
+++ b/binary_search/Silver5.ipynb
@@ -175,7 +175,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "''' \n",
+    "이분탐색 알고리즘\n",
+    "\n",
+    "입력: 배열(소스), 타겟, 시작범위, 끝범위\n",
+    "결과 = False\n",
+    "while 시작범위<=끝범위까지\n",
+    "    중간 지점 = (시작범위 + 끝범위) // 2\n",
+    "\n",
+    "    if 타겟 == 배열[중간지점]:\n",
+    "        결과 = True\n",
+    "    \n",
+    "    elif 타겟 > 배열[중간지점]: # 타겟 값이 더 큰거임. 그러니깐 더 큰쪽을 찾게 오른쪽으로 가야지\n",
+    "        시작 지점 = 중간지점 +1\n",
+    "    else: # 타겟 < 배열[중간지점]. 이건 타겟이 더 작은거...?\n",
+    "        끝 지점 = 중간지점 -1\n",
+    "    \n",
+    "    계속 while 문 돌면서 결과 값이 True인 곳으로 들어갈 때까지 찾음\n",
+    "if not 결과: # 결과가 false일 경우\n",
+    "    append(0)\n",
+    "else: #결과가 True일 경우\n",
+    "    append(1)\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
