--- a/binary_search/Silver5.ipynb
+++ b/binary_search/Silver5.ipynb
@@ -199,6 +199,171 @@
     "    append(1)\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "1920번\n",
+    "\n",
+    "N개의 정수 A[1], A[2], …, A[N]이 주어져 있을 때, 이 안에 X라는 정수가 존재하는지 알아내는 프로그램을 작성하시오.\n",
+    "\n",
+    "첫째 줄에 자연수 N(1 ≤ N ≤ 100,000)이 주어진다. \n",
+    "다음 줄에는 N개의 정수 A[1], A[2], …, A[N]이 주어진다. \n",
+    "다음 줄에는 M(1 ≤ M ≤ 100,000)이 주어진다. \n",
+    "다음 줄에는 M개의 수들이 주어지는데, 이 수들이 A안에 존재하는지 알아내면 된다. 모든 정수의 범위는 -2^31 보다 크거나 같고 2^31보다 작다.\n",
+    "\n",
+    "M개의 줄에 답을 출력한다. 존재하면 1을, 존재하지 않으면 0을 출력한다.\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "import sys\n",
+    "\n",
+    "N = int(sys.stdin.readline())\n",
+    "A = list(map(int, sys.stdin.readline().split()))\n",
+    "M = int(sys.stdin.readline())\n",
+    "arr_M = list(map(int, sys.stdin.readline().split()))\n",
+    "arr_M.sort()\n",
+    "\n",
+    "\n",
+    "result = []\n",
+    "for num_A in range(len(A)):\n",
+    "    found = False\n",
+    "    start = 0\n",
+    "    end = M-1\n",
+    "\n",
+    "    while start<=end:\n",
+    "        mid = (start + end)//2\n",
+    "        \n",
+    "        if N[i] == arr_M[mid]:\n",
+    "            found = True\n",
+    "            break\n",
+    "        elif N[i] > arr_M[mid]:\n",
+    "            start = mid +1\n",
+    "        else:\n",
+    "            end = mid - 1\n",
+    "    if not found:\n",
+    "\n",
+    "        result.append(0)\n",
+    "    else:\n",
+    "        result.append(1)\n",
+    "\n",
+    "print(*result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "7795번\n",
+    "\n",
+    "심해에는 두 종류의 생명체 A와 B가 존재한다. A는 B를 먹는다. \n",
+    "A는 자기보다 크기가 작은 먹이만 먹을 수 있다. \n",
+    "예를 들어, A의 크기가 {8, 1, 7, 3, 1}이고, B의 크기가 {3, 6, 1}인 경우에 A가 B를 먹을 수 있는 쌍의 개수는 7가지가 있다. \n",
+    "8-3, 8-6, 8-1, 7-3, 7-6, 7-1, 3-1.\n",
+    "\n",
+    "두 생명체 A와 B의 크기가 주어졌을 때, A의 크기가 B보다 큰 쌍이 몇 개나 있는지 구하는 프로그램을 작성하시오.\n",
+    "\n",
+    "\n",
+    "첫째 줄에 테스트 케이스의 개수 T가 주어진다. \n",
+    "각 테스트 케이스의 첫째 줄에는 A의 수 N과 B의 수 M이 주어진다. \n",
+    "둘째 줄에는 A의 크기가 모두 주어지며, \n",
+    "셋째 줄에는 B의 크기가 모두 주어진다. 크기는 양의 정수이다. (1 ≤ N, M ≤ 20,000).\n",
+    "\n",
+    "각 테스트 케이스마다, A가 B보다 큰 쌍의 개수를 출력한다.\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "##########################YOUR CODE##################################\n",
+    "'''\n",
+    "있는지 없는지를 보는것이 아닌 작은게 얼만큼 있는지를 확인하는 문제.\n",
+    "그렇다면 조건 분기를 같은지? 로 보는게 아니라 타겟 숫자가 배열보다 큰지 작은지 확인을 해야함\n",
+    "클 경우, 작은 쪽으로 가야하고 작을 경우 큰 쪽으로 가야함. 이렇게 해서 스타트 엔드가 작아질 경우로 가야함  \n",
+    "'''\n",
+    "import sys\n",
+    "Test_case = int(sys.stdin.readline())\n",
+    "\n",
+    "for case_num in range(0,Test_case):\n",
+    "\n",
+    "    N, M = map(int, sys.stdin.readline().split())\n",
+    "\n",
+    "    A = list(map(int, sys.stdin.readline().split()))\n",
+    "    B = list(map(int, sys.stdin.readline().split()))\n",
+    "    B.sort()\n",
+    "\n",
+    "    result = 0\n",
+    "    for i in range(0,N):\n",
+    "\n",
+    "        start = 0\n",
+    "        end = M\n",
+    "\n",
+    "        \n",
+    "        # found = 0\n",
+    "        while start < end:\n",
+    "            mid = (start + end) // 2\n",
+    "            if B[mid] < A[i]:\n",
+    "                start = mid + 1\n",
+    "            else:\n",
+    "                end = mid\n",
+    "\n",
+    "        result = result + (start)\n",
+    "        # print(f\"Result:{result}\")\n",
+    "\n",
+    "    print(result)\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' 첫째 줄에는 오영식이 이미 가지고 있는 랜선의 개수 K, 그리고 필요한 랜선의 개수 N이 입력된다.\n",
+    " K는 1이상 10,000이하의 정수이고, N은 1이상 1,000,000이하의 정수이다. 그리고 항상 K ≦ N 이다. \n",
+    " 그 후 K줄에 걸쳐 이미 가지고 있는 각 랜선의 길이가 센티미터 단위의 정수로 입력된다. \n",
+    " 랜선의 길이는 231-1보다 작거나 같은 자연수이다.\n",
+    " \n",
+    " 첫째 줄에 N개를 만들 수 있는 랜선의 최대 길이를 센티미터 단위의 정수로 출력한다.\n",
+    " '''\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "K , N = map(int, sys.stdin.readline().split())\n",
+    "arr = []\n",
+    "for _ in K:\n",
+    "    arr.append(int(sys.stdin.readline()))\n",
+    "\n",
+    "# 자를 길이 값\n",
+    "start = 1\n",
+    "end = max(arr)\n",
+    "\n",
+    "while start<=end:\n",
+    "    mid = (start + end) // 2\n",
+    "\n",
+    "    sum = 0\n",
+    "    for cable in arr:\n",
+    "        sum += (cable // mid)\n",
+    "\n",
+    "    if sum < N : #나온 선이 너무 적으면 \n",
+    "            end = mid - 1 \n",
+    "    else : #나온 선이 너무 많으면 \n",
+    "            start = mid + 1\n",
+    "            \n",
+    "        \n",
+    "    print(end)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
